# Hartonomous-Copilot

./: .gitignore  ACTUAL_ARCHITECTURE.md  ARCHITECTURE.md  BUILD.md  CHALLENGE_COMPLETE.md  CHALLENGE_REPORT.md  CHALLENGE_RESULTS.md  CLEANUP_PLAN.md  DEMO.md  FINAL_DEMO.md  FINAL_RESULTS.md  Hartonomous.Copilot.slnx  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_VISION.md  README.md  README.md.backup  ROADMAP.md  SESSION_SUMMARY.md  VISION.md  chat.py  chat_geo.py  chat_relational.py  chat_working.py  demo_final.py  download_and_ingest.py  final_demo.sh  final_proper_ingest.py  inference_demo.py  ingest_atomic.py  ingest_complete.py  ingest_model.py  ingest_unified_graph.py  run_ingest.sh  setup.py  simple_chat.py
archive/old_scripts/: build_connections.py  chat.py  complete_model_ingest_fixed.py  download_and_ingest.py  inference.py  ingest_complete.py  ingest_model.py  ingest_weights.py
native/: CMakeLists.txt
native/include/: hartonomous_native.h
native/src/: hilbert.cpp  manifold.cpp  stats.cpp  utils.cpp  version.cpp
scripts/: ingest_unified_graph.py  ingest_unified_graph_impl.py
sql/: 001_initial_schema.sql  002_graph_schema.sql  schema_v2_manifold.sql  schema_v2_simple.sql
src/: inference_engine.py  ingest_full_model.py
src/Hartonomous.Core/Domain/: Atom.cs
src/Hartonomous.Core/Encoding/: HilbertEncoder.cs
src/Hartonomous.Core/ValueObjects/: HilbertId.cs
src/Hartonomous.Infrastructure/: Hartonomous.Infrastructure.csproj
src/hartonomous/: db.py  encoding.py  hilbert.py  ingest_manifold.py  native.py
src/hartonomous/cli/: __main__.py  ingest.py
src/hartonomous/ingestion/: model.py
